fix: clean css file and add hidden span element to prevent layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,41 +20,3 @@ body {
 p {
   text-wrap: pretty;
 }
-
-@keyframes lineWidth {
-  0% {
-    transform: scaleX(0);
-    opacity: 0.3;
-  }
-  100% {
-    transform: scaleX(2);
-    opacity: 0.05;
-  }
-}
-
-@keyframes lineHeight {
-  0% {
-    transform: scaleY(0);
-    opacity: 0.3;
-  }
-  100% {
-    transform: scaleY(1);
-    opacity: 0.05;
-  }
-}
-
-.animate-line-height {
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-  animation-name: lineHeight;
-  animation-timing-function: ease-in-out;
-  animation-delay: 150ms;
-}
-
-.animate-line-width {
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-name: lineWidth;
-  animation-timing-function: ease-in-out;
-  animation-delay: 150ms;
-}
